--- a/estilos.css
+++ b/estilos.css
@@ -1,11 +1,24 @@
 *{
     box-sizing: border-box;
 }
+body {
+    margin: 0;
+}
+.main-header {
+    background: lightcoral;
+}
 .titulo {
     color: darkturquoise;
-    background: lightcoral;
+    padding: 10px;
+    margin: 0;
 }
 .main-nav{
     background: darkkhaki;
     position: relative;
+}
+.menu_link {
+    list-style: none;
+    padding: 8px;
+    margin: 0;
+    display: block;
 }
