--- a/estilos.css
+++ b/estilos.css
@@ -13,7 +13,7 @@ body {
     margin: 0;
 }
 .main-nav{
-    background: darkkhaki;
+    background: coral;
     position: relative;
 }
 .menu_link {
