--- a/estilos.css
+++ b/estilos.css
@@ -5,10 +5,10 @@ body {
     margin: 0;
 }
 .main-header {
-    background: lightcoral;
+    background: gold	;
 }
 .titulo {
-    color: darkturquoise;
+    color: darkblue;
     padding: 10px;
     margin: 0;
 }
