--- a/estilos.css
+++ b/estilos.css
@@ -17,7 +17,7 @@ body {
     position: relative;
 }
 .menu_link {
-    list-style: none;
+    text-decoration: none;
     padding: 8px;
     margin: 0;
     display: block;
