--- a/estilos.css
+++ b/estilos.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 .main-header {
-    background: gold	;
+    background: gold;
 }
 .titulo {
     color: darkblue;
@@ -18,6 +18,7 @@ body {
 }
 .menu_link {
     text-decoration: none;
+    color: black;
     padding: 8px;
     margin: 0;
     display: block;
