--- a/estilos.css
+++ b/estilos.css
@@ -16,6 +16,9 @@ body {
     background: coral;
     position: relative;
 }
+.menu {
+    
+}
 .menu_link {
     text-decoration: none;
     color: GreenYellow;
