--- a/estilos.css
+++ b/estilos.css
@@ -31,7 +31,11 @@ body {
     margin: 0;
     display: block;
 }
-
+.USIL {
+    font-size: 20px;
+    text-decoration-color: blueviolet;
+    color: violet;
+}
 
 
 .panas {
