--- a/estilos.css
+++ b/estilos.css
@@ -13,9 +13,25 @@ body {
     background: #F5BF56;
 }
 .titulo {
-    color: #2A5FA8; /*after-transition: #5698F5*/
+    color: #2A5FA8;
     padding: 10px;
     margin: 0;
+    animation-name: movimiento;
+    animation-duration: 5s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+}
+@keyframes movimiento {
+    0% {
+        margin-left: 300px;
+    }
+    50% {
+        margin-left: 890px;
+        color: #6aa5f8;
+    }
+    100% { 
+        margin-left: 300px;
+    }
 }
 .main-nav{
     background: #AD785C;
@@ -50,18 +66,72 @@ body {
 .img_juegos {
     width: 20%;
 }
+.tabla {
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    border: 1px solid red;
+    text-align: left;
+    padding: 8px;
+}
+.dominios {
+    color: coral;
+}
+.container {
+        width: 100%;
+        margin: 0;
+}
+.menu {
+        display: flex;
+        position: static;
+        visibility: visible;
+        opacity: 1;
+}
+.icon-menu {
+        display: none;
+}
 
 
+@media(min-width:480px) {
+    .container-section {
+        display: block;
+    }
+    .titulo {
+        animation-name: movimiento;
+        animation-duration: 3s;
+        animation-iteration-count: infinite;
+        animation-timing-function: linear;
+    }
+    @keyframes practica {
+        0% {
+            margin-left: 0px;
+        }
+        50% {
+            margin-left: 130px;
+            color: #6aa5f8;
+        }
+        100% {
+            margin-left: 0px;
+        }
+    }
+}
 
 
-
+.compañero{
+    color: Orange;
+}
+.carrera {
+    color: DarkKhaki;
+}
 .USIL {
-    font-size: 20px;
+    font-size: 30px;
     color: violet;
 }
 .panas {
     text-decoration: none;
     display: block;
     color: MediumTurquoise;
-    width: 131px;
+    width: 100px;
 }
