--- a/estilos.css
+++ b/estilos.css
@@ -90,6 +90,9 @@ body {
 .img_lugares {
     width: 25%;
 }
+.img_pasatiempos {
+    width: 25%;
+}
 .juegos {
     color: #DB5018;
     text-decoration: none;
